# gram

./: Main.hs  gram.cabal  stack.yaml
src/: Grammar.hs  Logic.hs  Main.hs  Museum.hs  Proof.hs  Prop.hs  Search.hs  TPTP.hs  Utils.hs
src/Logic/: Search.hs
src/Prop/: Search.hs  TPTP.hs  Transform.hs
