cabal-version:       >=1.10

name:                gram
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Lukasz Czajka
maintainer:          lukaszcz@mimuw.edu.pl
copyright:           Lukasz Czajka
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable gram
  main-is:             Main.hs
  other-modules:       Utils Search Grammar Logic Logic.Search TPTP Prop
  -- other-extensions:
  ghc-options:         -W -Werror -Wno-unused-top-binds
  build-depends:       base >=4.12,
                       pqueue,
                       containers,
                       unordered-containers,
                       mtl,
                       text,
                       attoparsec,
                       tptp
  hs-source-dirs:      src
  default-language:    Haskell2010
